# ashmatics-datamodels

./: .gitignore  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: IMPL-CommonDataModel_Phase1-2025-11-21.md  IMPL-MongoDocumentSchemas-Phase2-2025-11-21.md  contributing.md  index.md
docs/Plans/: ENGR-DesignPlan-CompleteDataModels-2025-11-21.md
docs/api/: common.md  documents.md  fda.md  use_cases.md
docs/design/: migration-plan.md  three-tier-schema.md
docs/examples/: fda-clearances.md  mongodb-documents.md  use-cases.md  validators.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/modules/: common.md  documents.md  fda.md  overview.md  use_cases.md
src/ashmatics_datamodels/: __init__.py
src/ashmatics_datamodels/common/: __init__.py  base.py  enums.py  frameworks.py  regulators.py  validators.py
src/ashmatics_datamodels/documents/: __init__.py  base.py  evidence.py  manufacturers.py  models.py  products.py  regulatory.py  use_cases.py
src/ashmatics_datamodels/fda/: __init__.py  adverse_events.py  classifications.py  clearances.py  enums.py  manufacturers.py  products.py  recalls.py
src/ashmatics_datamodels/use_cases/: __init__.py  categories.py  enums.py  use_cases.py
src/ashmatics_datamodels/utils/: __init__.py
tests/: __init__.py  test_documents.py
tests/fda/: __init__.py  test_clearances.py  test_manufacturers.py
tests/use_cases/: __init__.py
